[package]
name = "tremor-kv"
version = "0.6.1"
authors = ["The Tremor Team"]
edition = "2018"
license = "Apache-2.0"
description = "A logstash inspured key value extractor"
readme = "README.md"

[dependencies]
simd-json = { version = "0.11.1" }
serde = "1"

[features]
default = ["known-key"]
known-key = ["simd-json/known-key"]
arraybackend = ["simd-json/arraybackend"]
