[package]
name = "tremor-kv"
version = "0.7.0"
authors = ["The Tremor Team"]
edition = "2024"
license = "Apache-2.0"
description = "A logstash inspured key value extractor"
readme = "README.md"
repository = "https://github.com/tremor-rs/kv"
documentation = "https://docs.rs/tremor-kv"
homepage = "https://github.com/tremor-rs/kv"

[dependencies]
simd-json = { version = "0.15" }
serde = "1"

[features]
default = ["known-key"]
known-key = ["simd-json/known-key"]
arraybackend = ["simd-json/arraybackend"]
